{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 155,
  "lineage": "06cd08a6-c595-69e1-bbf9-b28ae5612489",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_https-k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:listener/net/k8s-workshops-loadbalancer/0512af794935f78b/b0345a8259523916",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:listener/net/k8s-workshops-loadbalancer/0512af794935f78b/b0345a8259523916",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:loadbalancer/net/k8s-workshops-loadbalancer/0512af794935f78b",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.codedeploy_web_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d8b8d9d63e87adc6",
            "public_dns": "ec2-3-123-81-23.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.81.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09d306f62f6732327",
            "public_dns": "ec2-18-185-217-87.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.185.217.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b446a0cb5c0ce7bc",
            "public_dns": "ec2-35-156-247-34.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.247.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "masters",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09356619876445425",
            "arn": "arn:aws:ec2:eu-central-1:621413642706:instance/i-05192bd3255f0bbd2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05192bd3255f0bbd2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkajszczak-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0961b088df0b8e588",
            "private_dns": "ip-10-0-101-10.eu-central-1.compute.internal",
            "private_ip": "10.0.101.10",
            "public_dns": "ec2-52-59-208-33.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.208.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e0cde42d65ebb3a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0679d52c80b2b828d",
            "tags": {
              "Environment": "prod",
              "Name": "controller-0",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c1a5581b4053aee1"
            ]
          },
          "depends_on": [
            "aws_security_group.web_instances_behind_alb",
            "data.aws_ami.ubuntu",
            "module.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09356619876445425",
            "arn": "arn:aws:ec2:eu-central-1:621413642706:instance/i-0a14a10871d71ac96",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a14a10871d71ac96",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkajszczak-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-039891a6ba2a56a50",
            "private_dns": "ip-10-0-101-11.eu-central-1.compute.internal",
            "private_ip": "10.0.101.11",
            "public_dns": "ec2-3-120-134-56.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.134.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-044153849c10c8171",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0679d52c80b2b828d",
            "tags": {
              "Environment": "prod",
              "Name": "controller-1",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c1a5581b4053aee1"
            ]
          },
          "depends_on": [
            "aws_security_group.web_instances_behind_alb",
            "data.aws_ami.ubuntu",
            "module.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09356619876445425",
            "arn": "arn:aws:ec2:eu-central-1:621413642706:instance/i-0a6d04374c8c8d2fc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a6d04374c8c8d2fc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkajszczak-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-033108fe0f8cf88dc",
            "private_dns": "ip-10-0-101-12.eu-central-1.compute.internal",
            "private_ip": "10.0.101.12",
            "public_dns": "ec2-3-124-195-188.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.195.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-054fbd03b058e1214",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0679d52c80b2b828d",
            "tags": {
              "Environment": "prod",
              "Name": "controller-2",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c1a5581b4053aee1"
            ]
          },
          "depends_on": [
            "aws_security_group.web_instances_behind_alb",
            "data.aws_ami.ubuntu",
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09356619876445425",
            "arn": "arn:aws:ec2:eu-central-1:621413642706:instance/i-0e6290c87b0b4f852",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e6290c87b0b4f852",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkajszczak-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0009c7a5cad8293ed",
            "private_dns": "ip-10-0-102-20.eu-central-1.compute.internal",
            "private_ip": "10.0.102.20",
            "public_dns": "ec2-18-184-46-40.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.46.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-086003cf83a184418",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d27c8d5e88aac36c",
            "tags": {
              "Environment": "prod",
              "Name": "worker-0",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c1a5581b4053aee1"
            ]
          },
          "depends_on": [
            "aws_security_group.web_instances_behind_alb",
            "data.aws_ami.ubuntu",
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f13cb5aaa5b18a10",
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:loadbalancer/net/k8s-workshops-loadbalancer/0512af794935f78b",
            "arn_suffix": "net/k8s-workshops-loadbalancer/0512af794935f78b",
            "dns_name": "k8s-workshops-loadbalancer-0512af794935f78b.elb.eu-central-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:loadbalancer/net/k8s-workshops-loadbalancer/0512af794935f78b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k8s-workshops-loadbalancer",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0679d52c80b2b828d"
              },
              {
                "subnet_id": "subnet-073bc9fca18b3b25f"
              },
              {
                "subnet_id": "subnet-0d27c8d5e88aac36c"
              }
            ],
            "subnets": [
              "subnet-0679d52c80b2b828d",
              "subnet-073bc9fca18b3b25f",
              "subnet-0d27c8d5e88aac36c"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-095b134e24134a321",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "codedeploy_web_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf",
            "arn_suffix": "targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-20191212051205818400000001",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf-20191212051250497100000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf",
            "target_id": "i-05192bd3255f0bbd2"
          },
          "depends_on": [
            "aws_instance.masters",
            "aws_lb_target_group.codedeploy_web_target_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf-20191212051250453500000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf",
            "target_id": "i-0a14a10871d71ac96"
          },
          "depends_on": [
            "aws_instance.masters",
            "aws_lb_target_group.codedeploy_web_target_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf-20191212051250533100000004",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:621413642706:targetgroup/tf-20191212051205818400000001/e0b5b4e7343e29bf",
            "target_id": "i-0a6d04374c8c8d2fc"
          },
          "depends_on": [
            "aws_instance.masters",
            "aws_lb_target_group.codedeploy_web_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8b8d9d63e87adc6",
            "id": "nat-083ffb5a1b613598e",
            "network_interface_id": "eni-0358adc321199e2e8",
            "private_ip": "10.0.101.36",
            "public_ip": "3.123.81.23",
            "subnet_id": "subnet-0679d52c80b2b828d",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d306f62f6732327",
            "id": "nat-045ecce396a99127c",
            "network_interface_id": "eni-06bb71ee54ef2622c",
            "private_ip": "10.0.102.61",
            "public_ip": "18.185.217.87",
            "subnet_id": "subnet-0d27c8d5e88aac36c",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b446a0cb5c0ce7bc",
            "id": "nat-0db67f1e9ecc760b4",
            "network_interface_id": "eni-0dc76c7a7f1edf0c8",
            "private_ip": "10.0.103.216",
            "public_ip": "35.156.247.34",
            "subnet_id": "subnet-073bc9fca18b3b25f",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b43091f27f6718c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-083ffb5a1b613598e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b43091f27f6718c2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0737077cef4e464281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-045ecce396a99127c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0737077cef4e46428",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0321190bd2aec14c01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0db67f1e9ecc760b4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0321190bd2aec14c0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f13cb5aaa5b18a10",
            "id": "r-rtb-04990e84993840b721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04990e84993840b72",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this[0]",
            "aws_route_table.public[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b43091f27f6718c2",
            "owner_id": "621413642706",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0737077cef4e46428",
            "owner_id": "621413642706",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0321190bd2aec14c0",
            "owner_id": "621413642706",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04990e84993840b72",
            "owner_id": "621413642706",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e2507c86538afb9",
            "route_table_id": "rtb-0b43091f27f6718c2",
            "subnet_id": "subnet-07a3d7c49959ceff1"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc729e9c3a8c9c80",
            "route_table_id": "rtb-0737077cef4e46428",
            "subnet_id": "subnet-059e68b561b0f3e13"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f754205ad7f70d9",
            "route_table_id": "rtb-0321190bd2aec14c0",
            "subnet_id": "subnet-095f9274d1d85ed9c"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a60da937e5b64ac5",
            "route_table_id": "rtb-04990e84993840b72",
            "subnet_id": "subnet-0679d52c80b2b828d"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af03e871a58a7b32",
            "route_table_id": "rtb-04990e84993840b72",
            "subnet_id": "subnet-0d27c8d5e88aac36c"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc29252941aa12c4",
            "route_table_id": "rtb-04990e84993840b72",
            "subnet_id": "subnet-073bc9fca18b3b25f"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:security-group/sg-0b43e4064101230e0",
            "description": "Loadbalancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b43e4064101230e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "k8s-workshops-loadbalancer-sg",
            "name_prefix": null,
            "owner_id": "621413642706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_instances_behind_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:security-group/sg-0c1a5581b4053aee1",
            "description": "k8s-workshops web instances - accept traffic from ALB only - security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1a5581b4053aee1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b43e4064101230e0"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s-workshops-web-instances-behind-alb-sg",
            "name_prefix": null,
            "owner_id": "621413642706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "aws_security_group.loadbalancer",
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:subnet/subnet-07a3d7c49959ceff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07a3d7c49959ceff1",
            "map_public_ip_on_launch": false,
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "aws_vpc.this[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:subnet/subnet-059e68b561b0f3e13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-059e68b561b0f3e13",
            "map_public_ip_on_launch": false,
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "aws_vpc.this[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:subnet/subnet-095f9274d1d85ed9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-095f9274d1d85ed9c",
            "map_public_ip_on_launch": false,
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "aws_vpc.this[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:subnet/subnet-0679d52c80b2b828d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0679d52c80b2b828d",
            "map_public_ip_on_launch": true,
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "aws_vpc.this[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:subnet/subnet-0d27c8d5e88aac36c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0d27c8d5e88aac36c",
            "map_public_ip_on_launch": true,
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "aws_vpc.this[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:subnet/subnet-073bc9fca18b3b25f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-073bc9fca18b3b25f",
            "map_public_ip_on_launch": true,
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-095b134e24134a321"
          },
          "depends_on": [
            "aws_vpc.this[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621413642706:vpc/vpc-095b134e24134a321",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0efa14237bbc13c6b",
            "default_route_table_id": "rtb-01cda24bdd41027c3",
            "default_security_group_id": "sg-060936cd5fd9722f7",
            "dhcp_options_id": "dopt-a79f63cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-095b134e24134a321",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01cda24bdd41027c3",
            "owner_id": "621413642706",
            "tags": {
              "Environment": "prod",
              "Name": "k8s-workshops-materials",
              "Project": "k8s-workshops",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}